Replace ArrayList<Double> with unboxed DoubleList across chart system
- Create high-performance unboxed DoubleList primitive array list with fast clear() and System.arraycopy
- Replace ArrayList<Double> across ChartDataSeries, ChartDataSet, and all chart output renderers
- Eliminate Double object autoboxing and GC overhead on chart updates